# vesting-ondrix

./: .gitignore  FINAL_AUDIT_REPORT.md  README.md  index.html  package-lock.json
.github/workflows/: dependency-lock-check.yml  evm-scan.yml  solana-scan.yml
bnb_vesting_ondrix/: bnb_test_output.txt  comprehensive-bsc-security-tests.js  hardhat.config.ts  package-lock.json  package.json
bnb_vesting_ondrix/contracts/: TestToken.sol  TokenVesting.sol
bnb_vesting_ondrix/scripts/: check-balances.ts  claim-tockens.ts  claim-tokens.ts  deploy.ts  interact.ts  test-self-claim.ts  test-tge.ts
bnb_vesting_ondrix/test/: TockenVesting.test.ts
vesting-dashboard/: DETAILS.txt  ENV_SETUP.md
vesting-dashboard/backend/: nodemon.json  package-lock.json  package.json  tsconfig.json
vesting-dashboard/backend/src/: index.ts  server.ts
vesting-dashboard/backend/src/api/: claim.ts  health.ts
vesting-dashboard/backend/src/config/: contracts.ts
vesting-dashboard/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
vesting-dashboard/frontend/src/: App.css  App.tsx  Main.tsx  main.tsx  vite-env.d.ts
vesting_ondrix_cont/: Cargo.toml  comprehensive-solana-tests.js  package-lock.json  package.json  solana_test_output.txt
vesting_ondrix_cont/.cargo/: audit.toml
vesting_ondrix_cont/src/: errors.rs  instruction.rs  lib.rs  processor.rs  state.rs
vesting_ondrix_cont/tests/: 1-initialize.js  2-fund.js  3-claim.js  vesting-check-status.js  vesting-clime.js  vesting-fund.js  vesting-init.js
(+34 files in other folders)
