[package]
name = "vesting_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.4"

spl-token = { version = "4.0.0", default-features = false, features = ["no-entrypoint"] }
arrayref = "0.3"
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
