[package]
name = "vesting_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=2.0"
thiserror = "=2.0"

spl-token = { version = "=6.0", default-features = false, features = ["no-entrypoint"] }
arrayref = "=0.3"
spl-associated-token-account = { version = "=5.0", features = ["no-entrypoint"] }
